# vcf-rs

./: .travis.yml  Cargo.toml  README.md  appveyor.yml
.github/workflows/: build.yml
benches/: parse.rs
examples/: recompress.rs
src/: error.rs  lib.rs  test.rs
src/header/: mod.rs  parser.rs  test.rs
src/read/: mod.rs  test.rs
src/reader/: mod.rs  test.rs
src/record/: mod.rs  parser.rs  test.rs
src/write/: test.rs
src/writer/: mod.rs  test.rs
testfiles/: 1kGP-subset.vcf  1kGP-subset.vcf.gz.tbi  ALL.chr13.phase3_shapeit2_mvncall_integrated_v5a.20130502.genotypes.subset.vcf.gz.tbi  ALL.chr20.phase3_shapeit2_mvncall_integrated_v5a.20130502.genotypes.20-34001094-34168504-subset.vcf.gz.tbi  ALL.chr20.phase3_shapeit2_mvncall_integrated_v5a.20130502.genotypes.20-34001094-34168504.vcf.gz.tbi  bad-vcf1.vcf  bad-vcf2.vcf  bad1.vcf  hg19ToHg38.over.chain.sorted.vcf.gz.tbi  simple1.vcf
