[package]
name = "vcf"
version = "0.6.0"
authors = ["OKAMURA, Yasunobu <okamura@informationsea.info>"]
edition = "2018"
license = "Apache-2.0"
description = "VCF Parser"
homepage = "https://github.com/informationsea/vcf-rs"
repository = "https://github.com/informationsea/vcf-rs"
keywords = ["VCF", "bioinformatics", "parser"]
categories = ["parser-implementations", "science"]
exclude = ["testfiles/*"]
readme = "README.md"

[badges]
appveyor = { repository = "informationsea/vcf-rs", branch = "master", service = "github" }
travis-ci = { repository = "informationsea/vcf-rs", branch = "master" }
maintenance = { status = "experimental" }

[dependencies]
nom = "7"
thiserror = "1"
once_cell = "1"

[dev-dependencies]
clap = "2"
flate2 = "1"